--- a/EMS/angular.json
+++ b/EMS/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -94,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "5d7f9b61-2bb7-4a48-bedc-e795c0e592fd"
   }
 }
