--- a/EMS/package.json
+++ b/EMS/package.json
@@ -15,12 +15,15 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/material": "~14.2.3",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "angular": "^1.6.10",
+    "bootstrap": "^5.3.0",
+    "firebase": "^9.22.1",
     "ngx-flag-icon-css": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
